add_library(mutiny SHARED 
  internal/Util.cpp
  internal/tribox.cpp
  internal/WavefrontParser.cpp
  _Time.cpp
  Mathf.cpp
  Texture.cpp
  Component.cpp
  buccaneer/AnimatedMeshRenderer.cpp
  buccaneer/AnimatedMesh.cpp
  GuiSkin.cpp
  Resources.cpp
  Behaviour.cpp
  Debug.cpp
  Camera.cpp
  ParticleRenderer.cpp
  Bounds.cpp
  ParticleEmitter.cpp
  Input.cpp
  CharacterController.cpp
  GameObject.cpp
  MeshFilter.cpp
  Matrix4x4.cpp
  Object.cpp
  GuiStyleState.cpp
  Font.cpp
  Color.cpp
  Vector2.cpp
  Vector3.cpp
  Rect.cpp
  Material.cpp
  RenderTexture.cpp
  GuiStyle.cpp
  Shader.cpp
  MeshRenderer.cpp
  Texture2d.cpp
  Mesh.cpp
  Collider.cpp
  Graphics.cpp
  Application.cpp
  RectOffset.cpp
  MeshCollider.cpp
  Transform.cpp
  Screen.cpp
  Gui.cpp
)

target_link_libraries(mutiny GLEW glut GL png SDL SDL_image SDL_gfx)
